--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -126,9 +126,14 @@ const { title } = Astro.props;
 		width: 800px;
 		max-width: calc(100% - 2rem);
 		width: 50%;
+		font-size: 17px;
 		color: white;
-		font-size: 20px;
 		line-height: 1.6;
+		font-synthesis: none;
+		text-rendering: optimizeLegibility;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-text-size-adjust: 100%;
 	}
 	main > div, main > ul {
 		width: 80%;
