--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 import Home from '../docs/home.md';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to MIAITutor.">
 	<main>
 			<Card
 				href="https://docs.astro.build/"
