--- a/src/pages/prompt-engineering/index.astro
+++ b/src/pages/prompt-engineering/index.astro
@@ -5,7 +5,7 @@ import PromptEng, { getHeadings } from '../../docs/prompt-engineering.md';
 import TableOfContents from '../../components/TableOfContents.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to MIAITutor.">
     <TableOfContents headings={getHeadings()} />
 	<main>
 			<Card
