--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,8 +40,8 @@ const { title } = Astro.props;
 								<a href="/prompt-engineering" class="py-5 px-3 text-white hover:text-green-200">Prompt Engineering</a>
 								<a href="#" class="py-5 px-3 text-white hover:text-green-200">Blogs</a>
 								<a href="#" class="py-5 px-3 text-white hover:text-green-200">Essays</a>
-								<a href="#" class="py-5 px-3 text-white hover:text-green-200">Lesson Plans</a>
-								<a href="#" class="py-5 px-3 text-white hover:text-green-200">Quizzes</a>
+								<a href="/lesson-plans" class="py-5 px-3 text-white hover:text-green-200">Lesson Plans</a>
+								<a href="/quizzes" class="py-5 px-3 text-white hover:text-green-200">Quizzes</a>
 							</div>
 						</div>
 						<div class="flex items-center space-x-1">
@@ -83,7 +83,7 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
-		font-size: 1rem;
+		font-size: 0.8rem;
 	}
 	nav {
 		background-image:url('/bg5.png'); 
